--- a/app/globals.css
+++ b/app/globals.css
@@ -104,16 +104,16 @@ body {
 /* Shake animation for attack mode */
 @keyframes shake {
   0%, 100% {
-    transform: scaleX(-1) translate(0, 0);
+    transform: translate(0, 0);
   }
   25% {
-    transform: scaleX(-1) translate(-2px, 1px);
+    transform: translate(-2px, 1px);
   }
   50% {
-    transform: scaleX(-1) translate(2px, -1px);
+    transform: translate(2px, -1px);
   }
   75% {
-    transform: scaleX(-1) translate(-1px, -1px);
+    transform: translate(-1px, -1px);
   }
 }
 
